--- a/templates/marriage/marriageView.html
+++ b/templates/marriage/marriageView.html
@@ -89,27 +89,27 @@
                                                 <li class="d-flex align-items-start gap-1">
                                                     <i class="bi bi-check2-circle fs-5 text-primary"></i>
                                                     {% comment %} <input class="form-check-input me-2" type="checkbox" value="" checked> {% endcomment %}
-                                                    <span>Deepened faith and adherence to Church teachings</span>
+                                                    <span>Deepened faith and adherence to Church teachings.</span>
                                                 </li>
                                                 <li class="d-flex align-items-start gap-1">
                                                     <i class="bi bi-check2-circle fs-5 text-primary"></i>
                                                     {% comment %} <input class="form-check-input me-2" type="checkbox" value="" checked> {% endcomment %}
-                                                    <span>Greater understanding of marriage as a holy covenant</span>
+                                                    <span>Greater understanding of marriage as a holy covenant.</span>
                                                 </li>
                                                 <li class="d-flex align-items-start gap-1">
                                                     <i class="bi bi-check2-circle fs-5 text-primary"></i>
                                                     {% comment %} <input class="form-check-input me-2" type="checkbox" value="" checked> {% endcomment %}
-                                                    <span>Strengthened commitment to love, patience,& humility</span>
+                                                    <span>Strengthened commitment to love, patience,& humility.</span>
                                                 </li>
                                                 <li class="d-flex align-items-start gap-1">
                                                     <i class="bi bi-check2-circle fs-5 text-primary"></i>
                                                     {% comment %} <input class="form-check-input me-2" type="checkbox" value="" checked> {% endcomment %}
-                                                    <span>Enhanced dedication to family life rooted in Church tradition</span>
+                                                    <span>Enhanced dedication to family life rooted in Church tradition.</span>
                                                 </li>
                                                 <li class="d-flex align-items-start gap-1">
                                                     <i class="bi bi-check2-circle fs-5 text-primary"></i>
                                                     {% comment %} <input class="form-check-input me-2" type="checkbox" value="" checked> {% endcomment %}
-                                                    <span>Ongoing spiritual growth and responsibility within the marital bond</span>
+                                                    <span>Ongoing spiritual growth & responsibility within the marital bond.</span>
                                                 </li>
                                             </ul>
                                         </div>
